# The-Evolution-of-Todo---Mastering-Spec-Driven-Development---Cloud-Native-AI

./: .env.example  .gitignore  CLAUDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  ROOT-README.md  TESTING.md  docker-compose.backend.yml  docker-compose.yml  install_kubectl_ai.sh  minikube-linux-amd64.deb  pyproject.toml  test_chatbot_fixes.py  test_profile_navigation.js  vercel.json
backend/: .env.frontend  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EVENT_DRIVEN_TODO_IMPLEMENTATION.md  README.md  SETUP.md  alembic.ini  app.py  app_runner.py  create_tables copy.py  create_tables.py  pyproject.toml  requirements.txt  start_both_servers.sh  start_services.py  startup.sh  todo_app.db
backend/app/: __init__.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  tasks.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/models/: __init__.py  audit_log.py  conversation.py  dashboard.py  message.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  dashboard_service.py  task.py
backend/app/services/: conversation_service.py  dashboard_service.py  event_publisher.py  message_service.py  task_service.py
backend/backend/tests/: test_audit.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users.py  001_initial_migration.py  20260101_0555_fix_uuid_types.py  (+5 more)
backend/src/: mcp_server.py  run_mcp_server.py  run_mcp_server_correct.py  start_combined_servers.py  test_mcp_server.py
backend/tests/: test_chatbot_integration.py
(+495 files in other folders)
