# Task: T001
# Spec: FR-019 (UV for dependencies)

[project]
name = "todo-cli"
version = "0.1.0"
description = "Phase-1 Todo CLI Application - In-memory todo task manager"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
