[project]
name = "hackathon-todo-backend"
version = "1.0.0"
description = "Multi-user task management API with JWT authentication"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "email-validator>=2.0.0",
    "openai-agents>=0.1.0",
    "openai>=1.3.5",
    "mcp>=1.0.0",
    "structlog>=23.2.0",
    "rapidfuzz>=3.6.1",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
